<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:background="@color/gray_800"
            android:contentDescription="@string/menu"
            android:padding="10dp"
            android:src="@drawable/ic_menu" />

        <LinearLayout
            android:id="@+id/menu_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:background="@color/gray_800"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/toggle_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:padding="10dp"
                android:text="@string/toggle_mask"
                android:textColor="@color/white_200"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="@color/red_400"
                android:textSize="8pt" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
